ckad/adapter.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: multi
spec:
  volumes:
  - name: logs-volume
    emptyDir: {}
  containers:
  - image: nginx
    name: app
    volumeMounts:
    - mountPath: /var/logs
      name: logs-volume
    args:
    - /bin/sh
    - -c
    - 'while true; do echo "$(date) | $(du -sh ~)" >> /var/logs/diskspace.txt; sleep 5; done;'
  - image: nginx
    name: transformer
    volumeMounts:
    - mountPath: /var/logs
      name: logs-volume
    args:
    - /bin/sh
    - -c
    - 'sleep 20; while true; do while read LINE; do echo "$LINE" | cut -f2 -d"|" >> $(date +%Y-%m-%d-%H-%M-%S)-transformed.txt; done < /var/logs/diskspace.txt; sleep 20; done;'
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
