ckad/failing-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: failing-pod
  name: failing-pod
spec:
  volumes:
  - name: cache-volume
    emptyDir: {}
  containers:
  - args:
    - /bin/sh
    - -c
    - while true; do echo $(date) >> ~/tmp/curr-date.txt; sleep
      5; done;
    image: busybox
    name: failing-pod
    volumeMounts:
    - mountPath: /root/tmp
      name: cache-volume
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
