ckad/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: manb3ast/app:v311220192 
    name: manb3ast
    ports:
        - containerPort: 9090
  - image: nginx
    name: nginx
    ports:
        - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
