ckad/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: app
  name: app
spec:
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: pvc
  containers:
  - image: nginx
    name: app
    volumeMounts:
    - name: data
      mountPath: /var/app/config
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
