ckad/rs.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: rs
  name: rs
spec:
  containers:
  - image: nginx
    name: rs
    resources:
      requests:
        memory: "200m"
        cpu: "1"
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
