ckad/secured.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: secured
  name: secured
spec:
  securityContext:
    fsGroup: 3000
  volumes:
  - name: sec-volume
    emptyDir: {}
  containers:
  - image: nginx
    name: secured
    volumeMounts:
    - mountPath: /data/app
      name: sec-volume
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
